<resources>
    <string name="app_name">CoviMap</string>
    <string name="map_api_key">AIzaSyDE1hSjk381yOSSqnR9khTVsNdg9A83tYE</string>
    <string name="direction_api_key">AIzaSyDw0fKWP-VzEX911Qd1PQ4llSrejuydED0</string>
    <string name="create_account">
        <font color="#00ff00">text</font>
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>

    <!-- For personal page   -->
    <string name="vaccine_green_title">Vaccine Green Card</string>
    <string name="menu_record_title">Record</string>
    <string name="menu_direct_title">Wayfinding</string>
    <string name="menu_history_title">Routes History</string>
    <string name="menu_dicover_title">Discover</string>
    <string name="menu_personal_tilte">Personal</string>
    <string name="distance_title">" Distance:  "</string>
    <string name="period_title">" Period:  "</string>
    <string name="record_button">Record</string>
    <string name="paused_button">Paused</string>
    <string name="resume_button">Resume</string>
    <string name="save_button">Save</string>
    <string name="start_point_hint">Starting location</string>
    <string name="end_point_hint">Ending location</string>
    <string name="start_date_title">Start</string>
    <string name="end_date_title">End</string>
    <string name="start_title">" Start:  "</string>
    <string name="end_title">" End:  "</string>
    <string name="find_location_hint">Search location</string>
    <string name="grocery_store_title">Grocery store</string>
    <string name="hospital_title">Hospital</string>
    <string name="school_title">School</string>
    <string name="coffee_title">Coffee</string>
    <string name="bank_title">Bank</string>
    <string name="post_office_title">Post office</string>
    <string name="airport_title">Airport</string>
    <string name="vaccine_green_status">Completed 2 doses of vaccine</string>
    <string name="vaccine_yellow_status">Just one dose of vaccine</string>
    <string name="vaccine_red_status">No dose yet</string>
    <string name="vaccine_yellow_title">Vaccine Yellow Card</string>
    <string name="vaccine_red_title">Vaccine Red Card</string>
    <string name="fullname_title">  Fullname</string>
    <string name="birthday_title">  Date born</string>
    <string name="vi_title">Vietnamese</string>
    <string name="en_title">English</string>
    <string name="update_info_button">Update info</string>
    <string name="mess_change_language">You need to open CoviApp again!</string>
    <string name="province_button_text">P</string>
    <string name="district_button_text">D</string>
    <string name="ward_button_text">W</string>
    <string name="province_button_hint">Province</string>
    <string name="district_button_hint">District</string>
    <string name="ward_button_hint">Ward, commune</string>

    <string name="epidemic_status_exmple"><b>Việt Nam</b>\nF0: Not update\n<i>Nguy cơ</i></string>
    <string name="note_button_hint">Note</string>
    <string name="red_zone_danger">Very high risk  </string>
    <string name="orange_zone_danger">High risk  </string>
    <string name="yellow_zone_danger">Moderate risk  </string>
    <string name="green_zone_danger">Low risk (new normal)  </string>
    <string name="gray_zone_danger">Not update  </string>
    <string name="menu_epidemiczone_title">Epidemic Zone</string>
    <string name="phone_number">Phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number_error">Please enter valid phone number!</string>
    <string name="your_location">Your current location</string>
    <string name="covid_passport">Covid Passport</string>
    <string name="title_activity_recovery_password">RecoveryPasswordActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update">COVID Passport</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="language">Language</string>
</resources>