<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/epidemic_ggmap_api"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_gravity="top|left"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/zoom_in_img_button"
            android:src="@drawable/zoom_in_icon"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:tint="@color/gray" />

        <ImageButton
            android:id="@+id/home_img_button"
            android:src="@drawable/home_icon"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:layout_marginTop="-2dp"
            app:tint="@color/gray"/>

        <ImageButton
            android:id="@+id/zoom_out_img_button"
            android:src="@drawable/zoom_out_icon"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/gray"/>

        <Button
            android:id="@+id/province_button"
            android:text="@string/province_button_text"
            android:textColor="@color/gray"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/district_button"
            android:text="@string/district_button_text"
            android:textColor="@color/gray"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/ward_button"
            android:text="@string/ward_button_text"
            android:textColor="@color/gray"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/f0_button"
            android:text="F"
            android:textColor="@color/gray"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"/>

        <ImageButton
            android:id="@+id/play_show_button"
            android:src="@drawable/play_arrow_icon"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:tint="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:clickable="false"
        android:layout_marginTop="15dp"
        android:layout_gravity="top|right"
        android:orientation="vertical"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:clickable="false"
            android:id="@+id/current_day_text_view"
            android:text="27/11/2021"
            android:padding="8dp"
            android:textColor="#000000"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/province_name_text_view"
                android:text="@string/epidemic_status_exmple"
                android:padding="8dp"
                android:textColor="#000000"
                android:background="@drawable/button_epidemic_zone_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="right"
        android:orientation="vertical"
        android:layout_marginBottom="65dp"
        android:layout_gravity="bottom|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:clickable="false"
            android:text="@string/red_zone_danger"
            android:drawableRight="@drawable/red_zone_icon"
            android:gravity="center"
            android:padding="6dp"
            android:textColor="#000000"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:clickable="false"
            android:text="@string/orange_zone_danger"
            android:drawableRight="@drawable/orange_zone_icon"
            android:gravity="center"
            android:padding="6dp"
            android:textColor="#000000"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:clickable="false"
            android:text="@string/yellow_zone_danger"
            android:drawableRight="@drawable/yellow_zone_icon"
            android:gravity="center"
            android:padding="6dp"
            android:textColor="#000000"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:clickable="false"
            android:text="@string/green_zone_danger"
            android:drawableRight="@drawable/green_zone_icon"
            android:gravity="center"
            android:padding="6dp"
            android:textColor="#000000"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:clickable="false"
            android:text="@string/gray_zone_danger"
            android:drawableRight="@drawable/gray_zone_icon"
            android:gravity="center"
            android:padding="6dp"
            android:textColor="#000000"
            android:background="@drawable/button_epidemic_zone_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/note_img_button"
            android:src="@drawable/info_icon"
            android:background="@drawable/button_epidemic_zone_style"
            android:tooltipText="@string/note_button_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/locate_position_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/my_location_icon"
        android:layout_gravity="center|right"
        android:backgroundTint="#EDEDF1"
        android:layout_marginBottom="100dp"
        app:fabSize="mini"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>