<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/discover_ggmap_api"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:padding="8dp"
        android:background="@drawable/radius_bottom_layout_custom"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SearchView
            android:id="@+id/search_discover_edt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="top|center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/edittext_custom"
            android:iconifiedByDefault="false"
            android:queryHint="@string/find_location_hint"
            android:searchHintIcon="@null"
            android:layout_marginTop="2dp"
            android:searchIcon="@null"/>

        <HorizontalScrollView
            android:scrollbars="none"
            android:padding="2dp"
            android:fadeScrollbars="false"
            android:layout_below="@+id/search_discover_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_marginTop="2dp"
                android:id="@+id/place_option"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="35dp">
                <RadioButton
                    android:id="@+id/store_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grocery_store_title"
                    android:button="@drawable/radio_store_custom"
                    android:textColor="@drawable/color_state_radio_button"
                    android:background="@drawable/radio_background_custom"
                    android:layout_marginRight="10dp"/>

                <RadioButton
                    android:id="@+id/hospital_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_title"
                    android:button="@drawable/radio_hospital_custom"
                    android:textColor="@drawable/color_state_radio_button"
                    android:background="@drawable/radio_background_custom"
                    android:layout_marginRight="10dp"/>

                <RadioButton
                    android:id="@+id/school_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_title"
                    android:button="@drawable/radio_school_custom"
                    android:textColor="@drawable/color_state_radio_button"
                    android:background="@drawable/radio_background_custom"
                    android:layout_marginRight="10dp"/>

                <RadioButton
                    android:id="@+id/coffee_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee_title"
                    android:button="@drawable/radio_coffee_custom"
                    android:textColor="@drawable/color_state_radio_button"
                    android:background="@drawable/radio_background_custom"
                    android:layout_marginRight="10dp"/>

                <RadioButton
                    android:id="@+id/bank_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_title"
                    android:button="@drawable/radio_bank_custom"
                    android:textColor="@drawable/color_state_radio_button"
                    android:background="@drawable/radio_background_custom"
                    android:layout_marginRight="10dp"/>

                <RadioButton
                    android:id="@+id/post_office_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_office_title"
                    android:button="@drawable/radio_post_office_custom"
                    android:textColor="@drawable/color_state_radio_button"
                    android:background="@drawable/radio_background_custom"
                    android:layout_marginRight="10dp"/>

                <RadioButton
                    android:id="@+id/airpost_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airport_title"
                    android:button="@drawable/radio_airport_custom"
                    android:textColor="@drawable/color_state_radio_button"
                    android:background="@drawable/radio_background_custom"
                    android:layout_marginRight="10dp"/>
            </RadioGroup>
        </HorizontalScrollView>
        <TextView
            android:id="@+id/result_discover_location_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_discover_edt"
            android:background="@drawable/result_location_textview_custom"
            android:drawableStart="@drawable/location_icon"
            android:padding="8dp"
            android:textColor="@color/black"
            android:visibility="gone"/>
    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/locate_position_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/my_location_icon"
        android:layout_gravity="center|right"
        android:backgroundTint="#EDEDF1"
        app:fabSize="mini"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>