<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/history_journey_custom"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text=" "
            android:gravity="center"
            android:drawableStart="@drawable/calendar_icon"/>

        <TextView
            android:id="@+id/created_day_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="01/01/2021" />
    </LinearLayout>

    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/start_title"
            android:gravity="center"
            android:drawableStart="@drawable/start_location_icon" />

        <TextView
            android:id="@+id/strart_point_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="Bình Định"/>

    </LinearLayout>
    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/end_title"
            android:gravity="center"
            android:drawableStart="@drawable/target_location_icon"/>

        <TextView
            android:id="@+id/end_point_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="Đắk Lắk" />

    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/distance_title"
                android:gravity="center"
                android:drawableLeft="@drawable/road_icon"/>
            <TextView
                android:id="@+id/distance_text_view_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text=" 0 km" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/period_title"
                android:gravity="center"
                android:drawableLeft="@drawable/time_icon"/>
            <TextView
                android:id="@+id/period_text_view_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="#000000"
                android:text=" 00:00 " />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>